@@ -11,6 +11,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Queue;
 import java.util.concurrent.CompletableFuture;
@@ -98,15 +99,15 @@ public class W4Queue {
     }
 
     public <T extends Object> T get() {
-        W4QueueResult<T> result = run();
-        return result.getFirst();
+        W4QueueResult<List<T>> result = run();
+        return result.getFirst().get(0);
     }
 
     public <T extends Object> void get(W4ParsePromise<T> w4ParsePromise) {
         if (this.requestList.size() > 1) {
             LOG.warn("W4Processor queue contains {} items, but used only first", this.requestList.size());
         }
-        run((result -> w4ParsePromise.complete((T) result.getFirst())));
+        run((result -> w4ParsePromise.complete((T) result.getFirst().get(0))));
     }
 
     public void runTaskList(CountDownLatch latch) {
@@ -127,19 +128,19 @@ public class W4Queue {
 
     private void runTask(CountDownLatch latch, W4QueueTask task, W4QueueTaskPromise taskPromise) {
         final W4ParsePromise internalPromise = task.getTaskPromise();
-        W4ParsePromise parsePromise = (model) -> {
+        W4ParsePromise parsePromise = (list) -> {
             Integer idx = this.index.get(task.hashCode());
             if (idx != null) {
-                this.result.addResult(idx, model);
+                this.result.addResult(idx, list);
 
                 if (this.progressPromise != null) {
-                    this.progressPromise.onProgress(task, model);
+                    this.progressPromise.onProgress(task, list);
                 }
                 latch.countDown();
             }
 
             if (internalPromise != null) {
-                internalPromise.complete(model);
+                internalPromise.complete(list);
             }
             taskPromise.taskCompleted();
         };
